--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tim Smith
-    <link rel="stylesheet" href="styles.css">
-    <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="use-credentials"></script>
-
-  </title>
+  <title>Tim Smith</title>
+  <link rel="stylesheet" href="styles.css">
+  <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="use-credentials"></script>
   <link rel="stylesheet" href="./styles.css">
   <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
 </head>
