--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="flex flex-1">
         <div class="about-me__info--container">
           <figure class="about-me__picture--mask">
-            <img src="./Assets/tim.png" class="about-me__picture" alt="Picture of Me!">
+            <img src="./assets/tim.png" class="about-me__picture" alt="Picture of Me!">
           </figure>
           <h1 class="about-me__info--title">
             Hey! I'm <span class="text--purple">Tim Smith</span>&nbsp;<span class="wave">👋</span>
@@ -63,7 +63,7 @@
             <a href="" class="about-me__link">
               <i class="far fa-envelope"></i>
             </a>
-            <a href="./Assets/Example Resume.pdf" target="_blank" class="about-me__link">
+            <a href="./assets/Example Resume.pdf" target="_blank" class="about-me__link">
               <i class="fas fa-file-pdf"></i>
             </a>
       </div>
@@ -136,7 +136,7 @@
           </li>
           <li class="project">
             <div class="project__wrapper">
-              <img src="./Assets/chat.png" class="project__img" alt="Chat App">
+              <img src="./assets/chat.png" class="project__img" alt="Chat App">
               <div class="project__description">
                 <h3 class="project__description--title">Chat App</h3>
                 <h4 class="project__description--sub-title">
@@ -161,7 +161,7 @@
           </li>
           <li class="project">
             <div class="project__wrapper">
-              <img src="./Assets/dashboard.png" class="project__img" alt="Dashboard">
+              <img src="./assets/dashboard.png" class="project__img" alt="Dashboard">
               <div class="project__description">
                 <h3 class="project__description--title">Dashboard</h3>
                 <h4 class="project__description--sub-title">
@@ -192,7 +192,7 @@
     <div class="row footer__row">
       <a href="#" class="footer__anchor">
         <figure class="footer__logo">
-          <img src="./Assets/logo.svg" class="footer__logo--img" alt="">
+          <img src="./assets/logo.svg" class="footer__logo--img" alt="">
         </figure>
         <span class="footer__logo--popper">
           Top
@@ -215,7 +215,7 @@
           link__hover-effect
           link__hover-effect--white
         " target="_blank">Email</a>
-        <a href="./Assets/Example Resume.pdf" target="_blank" class="
+        <a href="./assets/Example Resume.pdf" target="_blank" class="
           footer__social--link
           link__hover-effect
           link__hover-effect--white
